# MultiPepGen

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  IMPROVEMENT_ROADMAP.md  LICENSE  README.md  docker-compose.yml  extract_code.py  pyproject.toml  requirements.txt  setup.py  validation.py
configs/: default_config.yaml
data/: README.md
docs/: methodology.md
examples/: basic_usage.py
notebooks/: reproducibilidad_figuras.ipynb  tutorial_reproducibility.ipynb
scripts/: train.py
src/multipepgen/: __init__.py  benchmarking.py  cli.py  config.py  evaluate.py
src/multipepgen/models/: cgan.py
src/multipepgen/utils/: descriptors.py  logger.py  postprocessing.py  preprocessing.py
src/multipepgen/validation/: metrics.py  validation.py
tests/: test_cgan.py  test_descriptors.py  test_metrics.py  test_postprocessing.py  test_preprocessing.py
